remove conflicting builds and functions propertie

--- a/vercel.json
+++ b/vercel.json
@@ -1,33 +1,5 @@
 {
   "version": 2,
   "name": "pulse-moment",
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ],
-  "env": {
-    "GOOGLE_AI_API_KEY": "@google-ai-api-key",
-    "GROQ_API_KEY": "@groq-api-key",
-    "FAL_API_KEY": "@fal-api-key",
-    "ANTHROPIC_API_KEY": "@anthropic-api-key"
-  },
-  "regions": ["iad1"],
-  "functions": {
-    "api/**/*.js": {
-      "memory": 1024,
-      "maxDuration": 30
-    }
-  }
+  "regions": ["iad1"]
 }
